--- a/JavaScript/EvenOddCounter/style.css
+++ b/JavaScript/EvenOddCounter/style.css
@@ -1,35 +1,57 @@
 *
 {
     box-sizing: border-box;
+    padding: 0;
+    margin: 0;
 }
-body
+.wrap
 {
-    background-color: lightcyan;
-    justify-content: center;
-    align-items: center;
-    border:1px rgba(232, 234, 235,0.82) solid;
-}
-#counter
-{
-    height: 200px;
-    width: 200px;
-    background-color: antiquewhite;
-    box-shadow:5px 5px black;
-    padding: 0px;
     display:flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    height: 40vh;
-    margin-left:85vh;
-    margin-top:15vh;
+    padding: 70px;
+    background-color: aquamarine;
+    width: 100%;
+    height: 100vh;
 }
-#number
+.sub-warp
 {
-  float:right;
-  height: 20vh; 
-  margin-right:35vh;   
-  color:rgb(226, 43, 43);
-  margin-top:0vh;
-   
+    background-color: rgb(215, 221, 250);
+    padding: 80px;
+    border-radius: 10px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    box-shadow: silver;
+}
+.btn button
+{
+      padding: 6px 15px;
+      border-radius: 4px;
+      font-size: 1rem;
+      background: pink;
+      margin: 5px 0;
+      border: none;
+      cursor:pointer;
+      transition: 0.4s ease;
+      color:deepskyblue;
+      font-weight: 600;
+      margin: 5px 10px;
+}
+.btn button:hover
+{
+      transform: scale(1.05);
+}
+#para
+{
+    font-size: 2rem;
+    color: black;
+}
+.msg
+{
+    padding: 20px 0 0 0;
+    color: black;
+    font-size: 2rem;
 }
